Closed Bug 1624936 Opened 5 years ago Closed 5 years ago

VoiceOver does not speak 'required' attribute on radio buttons

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox77 --- verified

People

(Reporter: morgan, Assigned: morgan)

References

Details

(Whiteboard: [mac_2020_1])

Attachments

(2 files)

STR:

  1. Launch Firefox Nightly with VO
  2. Navigate to https://a11ysupport.io/tests/html/html/required_attribute_radio_group.html
  3. Move VO cursor to radio buttons in group

Expected:
VO Announces "Dog, required, radio button 2 of 3", for example

Actual:
VO Announces: "Dog, radio button"

Priority: -- → P2
Whiteboard: [mac_2020_1]
See Also: → 1624938
Assignee: nobody → mreschenberg
Priority: P2 → P1
Attachment #9139248 - Attachment description: Bug 1624936: Add required state caching, attribute handling for mozCheckboxAccessibles. r=eeejay → Bug 1624936: Add required state caching, attribute handling. r=eeejay
Attachment #9139248 - Attachment description: Bug 1624936: Add required state caching, attribute handling. r=eeejay → Bug 1624936: Add required state caching, attribute handling for mozCheckboxAccessibles. r=eeejay
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d117eac2aafe Fire state change event when required state changes. r=eeejay https://hg.mozilla.org/integration/autoland/rev/160413fb8acb Add required state caching, attribute handling for mozCheckboxAccessibles. r=eeejay
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77

Reproduced the initial issue using an old Nightly build from 2020-03-25 where the radiobutton was called as Dog, radio button. Using latest Firefox Beta 77.0b4 build on macOS 10.15.5 Beta, VoiceOver now calls it Dog, required, radio button but without a count like Safari and Chrome Dog, required, radio button 1 of 3. Is this only partially fixed? Or that's another issue that should have a separate bug?

Flags: needinfo?(mreschenberg)

That is dealt with in bug 1624909.

Flags: needinfo?(mreschenberg)

(In reply to Marco Zehe (:MarcoZ) from comment #7)

That is dealt with in bug 1624909.

Thanks for the info, closing this bug based on that info.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: