Bug 1624936: Fire state change event when required state changes. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D71413